<resources>
    <string name="app_name">TakeOff</string>
    <string name="action_settings">Settings</string>

    <!-- SEARCH PAGE STRINGS START HERE-->
       <string name="search_message">Please set your search parameters.\nDeparture Date and
       at least one airport code is required</string>
    <string name="continent_message">Continent:</string>
    <string name="date_format">MM-dd-yyyy</string>
    <string name="search_button">Search</string>
    <string name="history_button">History</string>
    <string name="title_activity_search_info">SearchInfo</string>
    <string name="clear_departure_button">Clear Departure</string>
    <string name="clear_return_button">Clear Return</string>
    <string name="country_message">Enter the countries you want with a comma separating each:</string>
    <string name="city_message">Enter the cities you want with a comma separating each:</string>
    <string name="budget_message">Enter your maximum budget per ticket:</string>
    <string name="refundable_message">Check if you only want refundable tickets:</string>
    <string name="travel_class_message">Select your preferred travel class:</string>
    <string name="alliance_message">Select your preferred alliance:</string>
    <string name="wait_time_message">Maximum wait time in hours:</string>
    <string name="ticket_message">Quantity:</string>
    <string name="airport_message">Enter Airport Code with a comma separating each:</string>

    <!-- Text Hints -->
    <string name="title_activity_filter_search">FilterSearch</string>
    <string name="departure_date">Departure Date</string>
    <string name="returning_date">Return Date(optional)</string>
    <string name="cities">Cities</string>
    <string name="countries">Countries</string>
    <string name="budget">Maximum Budget</string>
    <string name="ticket">Quantity</string>
    <string name="refundable_checkbox">Refundable Tickets Only</string>
    <string name="nonstop_checkbox">Direct Flight Only</string>
    <string name="wait_time">Maximum Wait Time</string>
    <string name="departure_early_time">Earliest Departure Time</string>
    <string name="departure_late_time">Latest Departure Time</string>
    <string name="airport">Airport Code</string>
    <string name = "filter_message">Please Enter the information to filter your Search Query</string>

    <!-- Continent Boxes -->
    <string name="africa">Africa</string>
    <string name="antarctica">Antarctica</string>
    <string name="asia">Asia</string>
    <string name="australia">Australia</string>
    <string name="europe">Europe</string>
    <string name="north_america">North America</string>
    <string name="south_america">South America</string>
    <string name="oceania">Oceania</string>

    <!-- Seat Classes -->
    <string name="class_none">None</string>
    <string name="class_coach">Coach</string>
    <string name="class_p_coach">Premium Coach</string>
    <string name="class_business">Business</string>
    <string name="class_first">First</string>

    <!-- Alliances Classes -->
    <string name="alliance_none">None</string>
    <string name="alliance_oneworld">Oneworld</string>
    <string name="alliance_star">Star Alliance</string>
    <string name="alliance_sky">SkyTeam</string>
    <!-- SEARCH PAGE STRINGS END HERE -->


    <!-- Error Handling -->
    <string name="error_invalid_credentials">Invalid email or password</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_password_short">Password must be at least 4 characters</string>
    <string name="error_password_match">Passwords do not match</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_favorites">No favorites found</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="firebase_profile_fail">Failed to retrieve user information</string>
    <string name="please_sign_in">Please sign in to use this feature!</string>
    <string name="error_no_groups">No groups to display</string>
    <string name="error_internal">Sorry, TakeOff has experienced an internal error. Please try again later.</string>

    <!-- FlightInfo -->
    <string name="title_activity_flight_info">FlightInfo</string>
    <string name="title_activity_flight_info_view">FlightInfoView</string>
    <string name="title_activity_dash_board_search_history">DashBoardSearchHistory</string>
    <string name="title_activity_tabbing">TabbingActivity</string>

    <!-- Dashboard -->
    <string name="dashboard_tag">dashboard</string>
    <string name="dashboard_fav">favorites</string>
    <string name="dashboard_his">searchHistory</string>
    <string name="dashboard_pro">profile</string>
    <string name="dashboard_Tag">Dashboard</string>
    <string name="dashboard_Fav">Favorites</string>
    <string name="dashboard_His">Search History</string>
    <string name="dashboard_Pro">Profile</string>
    <string name="dashboard_search_button">Search</string>
    <string name="dashboard_flight_mesg">FlightActual</string>
    <string name="dashboard_no_results">No Results</string>

    <!-- Profile -->
    <string name="profile_group_button">My Groups</string>
    <string name="profile_make_group_button">New Group</string>
    <string name="profile_enter_name">Please enter the new group name:</string>
    <string name="profile_ok">OK</string>
    <string name="profile_select">Select Image</string>
    <string name="group_extra">GROUP_MESSAGE</string>
    <string name="group_invite">Add a Member</string>
    <string name="group_invite_email">Enter the email of the new member:</string>
    <string name="group_invite_error">Sorry, that\'s not a valid email</string>
    <string name="group_invite_dne">That user does not exist</string>
    <string name="group_invite_success">Group member added!</string>
    <string name="group_share">Share a Flight</string>
    <string name="group_shared">shared</string>
    <string name="group_share_none">You have no favorites to share!</string>
    <string name="group_share_choose">Choose one of your favorite Flights to share:</string>

    <!-- Firebase -->
    <string name="firebase_ref">https://brilliant-inferno-6470.firebaseio.com/</string>
    <string name="firebase_uid">uid</string>
    <string name="firebase_fav">favoriteFlights</string>
    <string name="firebase_grp">groups</string>
    <string name="firebase_grn">groupname</string>
    <string name="firebase_users">users</string>
    <string name="firebase_uname">username</string>
    <string name="firebase_sqs">searchQueries</string>
    <string name="firebase_mem">members</string>
    <string name="firebase_pic">profilePicture</string>
    <string name="firebase_icon">icon</string>
    <string name="firebase_img_type">image/*</string>
    <string name="firebase_shared">members</string>

    <!-- Sign up / Log in -->
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="prompt_password_2">confirm password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_log_in">Log In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_log_in">Log In</string>


</resources>
